--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "devDependencies": {
     "@types/joi": "^10.4.3",
     "@types/node": "^8.0.31",
-    "jest": "^21.2.1",
     "ts-jest": "^21.1.3",
     "typemoq": "^2.0.1",
     "typescript": "^2.5.3"
@@ -49,7 +48,7 @@
       "^.+\\.(ts)$": "./node_modules/ts-jest/preprocessor.js"
     },
     "testMatch": [
-      "**/test/**/*.test.(ts|js)"
+      "**/tests/**/*.test.(ts|js)"
     ],
     "testEnvironment": "node",
     "mapCoverage": true
