--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "mindless",
   "version": "1.0.0",
   "description": "",
-  "main": "index.ts",
+  "main": "dist/index.js",
+  "type": "index.ts",
   "directories": {
     "lib": "lib"
   },
   "devDependencies": {
     "@types/joi": "^10.4.3",
     "@types/node": "^8.0.31",
+    "jest": "^21.2.1",
     "ts-jest": "^21.1.3",
     "typemoq": "^2.0.1",
     "typescript": "^2.5.3"
@@ -19,6 +21,7 @@
     "reflect-metadata": "^0.1.10"
   },
   "scripts": {
+    "build": "tsc",
     "test": "jest"
   },
   "repository": {
