Added initial configuration manager

--- a/package.json
+++ b/package.json
@@ -1,59 +1,66 @@
 {
-  "name": "mindless",
-  "version": "1.0.0",
-  "description": "",
-  "main": "dist/index.js",
-  "type": "index.ts",
-  "directories": {
-    "lib": "lib"
-  },
-  "devDependencies": {
-    "@types/joi": "^10.4.3",
-    "@types/node": "^8.0.31",
-    "jest": "^21.2.1",
-    "ts-jest": "^21.1.3",
-    "typemoq": "^2.0.1",
-    "typescript": "^2.5.3"
-  },
-  "dependencies": {
-    "dynogels": "^8.0.1",
-    "inversify": "^4.3.0",
-    "reflect-metadata": "^0.1.10"
-  },
-  "scripts": {
-    "build": "tsc",
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/SpartanLabs/mindless.git"
-  },
-  "keywords": [
-    "typescript",
-    "node",
-    "framework"
-  ],
-  "author": "SpartanLabs, LLC",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/SpartanLabs/mindless/issues"
-  },
-  "homepage": "https://github.com/SpartanLabs/mindless#readme",
-  "jest": {
-    "globals": {
-      "tsConfigFile": "tsconfig.json"
+    "name": "mindless",
+    "version": "1.0.0",
+    "description": "",
+    "main": "dist/index.js",
+    "type": "index.ts",
+    "directories": {
+        "lib": "lib"
     },
-    "moduleFileExtensions": [
-      "ts",
-      "js"
-    ],
-    "transform": {
-      "^.+\\.(ts)$": "./node_modules/ts-jest/preprocessor.js"
+    "config": {
+        "Dynamo": {
+            "endpoint": "http://localhost:8008"
+        }
     },
-    "testMatch": [
-      "**/tests/**/*.test.(ts|js)"
+    "devDependencies": {
+        "@types/joi": "^10.4.3",
+        "@types/node": "^8.0.31",
+        "jest": "^21.2.1",
+        "ts-jest": "^21.1.3",
+        "typemoq": "^2.0.1",
+        "typescript": "^2.5.3"
+    },
+    "dependencies": {
+        "@types/config": "^0.0.33",
+        "config": "^1.27.0",
+        "dynogels": "^8.0.1",
+        "inversify": "^4.3.0",
+        "reflect-metadata": "^0.1.10"
+    },
+    "scripts": {
+        "build": "tsc",
+        "test": "jest"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/SpartanLabs/mindless.git"
+    },
+    "keywords": [
+        "typescript",
+        "node",
+        "framework"
     ],
-    "testEnvironment": "node",
-    "mapCoverage": true
-  }
+    "author": "SpartanLabs, LLC",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/SpartanLabs/mindless/issues"
+    },
+    "homepage": "https://github.com/SpartanLabs/mindless#readme",
+    "jest": {
+        "globals": {
+            "tsConfigFile": "tsconfig.json"
+        },
+        "moduleFileExtensions": [
+            "ts",
+            "js"
+        ],
+        "transform": {
+            "^.+\\.(ts)$": "./node_modules/ts-jest/preprocessor.js"
+        },
+        "testMatch": [
+            "**/tests/**/*.test.(ts|js)"
+        ],
+        "testEnvironment": "node",
+        "mapCoverage": true
+    }
 }
