--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "dist/index.js",
   "type": "index.ts",
   "directories": {
-    "lib": "lib"
+    "lib": "lib",
+    "tests": "tests"
   },
   "devDependencies": {
+    "@types/jest": "^21.1.6",
     "@types/joi": "^10.4.3",
     "@types/node": "^8.0.31",
     "jest": "^21.2.1",
-    "ts-jest": "^21.1.3",
+    "ts-jest": "^21.2.3",
     "typemoq": "^2.0.1",
     "typescript": "^2.5.3"
   },
@@ -21,7 +23,7 @@
     "reflect-metadata": "^0.1.10"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "test": "jest",
     "test-cover": "jest --coverage"
   },
