--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "reflect-metadata": "^0.1.10"
     },
     "scripts": {
-        "build": "tsc",
+        "build": "rm -rf ./dist && tsc",
         "test": "jest",
         "test-cover": "jest --coverage"
     },
