Change package name to mindless-framework

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "mindless",
+    "name": "mindless-framework",
     "version": "1.0.0",
     "description": "",
     "main": "dist/index.js",
