--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: node_js
 node_js:
 - '8'
 before_deploy:
-- "./before_deploy.sh"
+- "npm run build"
 deploy:
   provider: npm
   email: moraneva@msu.edu
