Made Model protected on DynamoTable (#33)
* added joi as a dependency and moved types to regular dependencies

* Moved dependencies back to dev

* making model protected on DynamoTable so inherited models can do complex operations

* made model public and added it to model factory definition

* Making dynamo endpoint default to nothing

* legnth=>length

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     },
     "devDependencies": {
         "@types/jest": "^21.1.6",
-        "@types/joi": "^10.4.3",
         "@types/node": "^8.0.31",
         "jest": "^21.2.1",
         "ts-jest": "^21.2.3",
@@ -19,9 +18,11 @@
     },
     "dependencies": {
         "@types/dynogels": "^8.0.0",
+        "@types/joi": "^13.0.3",
         "@types/route-parser": "^0.1.1",
         "dynogels": "^8.0.1",
         "inversify": "^4.3.0",
+        "joi": "^13.0.2",
         "reflect-metadata": "^0.1.10",
         "route-parser": "^0.0.5"
     },
