--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mindless",
-    "version": "1.0.0-alpha.10",
+    "version": "1.0.0-alpha.11",
     "description": "",
     "main": "dist/index.js",
     "type": "index.ts",
@@ -18,11 +18,11 @@
     },
     "dependencies": {
         "@types/dynogels": "^8.0.0",
-        "@types/joi": "^13.0.3",
+        "@types/joi": "10.6.1",
         "@types/route-parser": "^0.1.1",
         "dynogels": "^8.0.1",
         "inversify": "^4.3.0",
-        "joi": "^13.0.2",
+        "joi": "12.0.0",
         "reflect-metadata": "^0.1.10",
         "route-parser": "^0.0.5"
     },
