--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
         "removeComments": true,
         "noImplicitAny": false,
         "experimentalDecorators": true,
-        "lib": ["es2015"]
+        "lib": ["es2015"],
+        "target": "es2016"
     },
     "exclude": [
         "node_modules",
