--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "mindless",
-    "version": "1.0.0-alpha.22",
+    "version": "1.0.0-beta.1",
     "description": "",
     "main": "dist/index.js",
     "type": "index.ts",
