--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "mindless",
     "version": "1.0.0-beta.1",
     "description": "",
-    "main": "dist/index.js",
-    "type": "index.ts",
+    "main": "dist/mindless.js",
+    "type": "./dist/mindless.d.ts",
     "directories": {
         "lib": "lib",
         "tests": "tests"
