almost there i think

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,9 @@ npm-debug.log
 dist
 yarn-error.log
 package/
+src/**/*.js
+src/**/*.js.map
+src/**/*.d.ts
+mindless.js
+mindless.js.map
+mindless.d.ts
