--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "@types/dynogels": "^8.0.0",
         "@types/jest": "^21.1.6",
         "@types/joi": "10.6.1",
+        "@types/lodash": "^4.14.108",
         "@types/node": "^8.0.31",
         "@types/route-parser": "^0.1.1",
         "jest": "^21.2.1",
@@ -18,6 +19,7 @@
     "dependencies": {
         "dynogels": "^8.0.1",
         "joi": "12.0.0",
+        "lodash": "^4.17.10",
         "route-parser": "^0.0.5"
     },
     "peerDependencies": {
