Packaging and Cleanup (#59)
* clean up and packaging

* idk

* clen up

* fix

* almost there i think

* one more

* something is weird here

* i think we got it, still not perfect and doesnt make sense but whatever

* fix

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ npm-debug.log
 .idea
 dist
 yarn-error.log
+package/
+src/**/*.js
+src/**/*.js.map
+src/**/*.d.ts
+index.js
+index.js.map
+index.d.ts
