--- a/package.json
+++ b/package.json
@@ -1,13 +1,9 @@
 {
     "name": "mindless",
-    "version": "1.0.0-beta.1",
+    "version": "1.0.0-beta.6",
     "description": "",
-    "main": "dist/index.js",
-    "type": "index.ts",
-    "directories": {
-        "lib": "lib",
-        "tests": "tests"
-    },
+    "main": "index.js",
+    "type": "index.d.ts",
     "devDependencies": {
         "@types/dynogels": "^8.0.0",
         "@types/jest": "^21.1.6",
@@ -34,7 +30,7 @@
         "route-parser": "^0.0.5"
     },
     "scripts": {
-        "build": "rm -rf ./dist && tsc",
+        "build": "tsc",
         "test": "jest",
         "test-cover": "jest --coverage --collectCoverageFrom=!**/index.ts --collectCoverageFrom=lib/**/*.ts"
     },
