--- a/package.json
+++ b/package.json
@@ -17,17 +17,12 @@
     },
     "dependencies": {
         "dynogels": "^8.0.1",
-        "inversify": "^4.13.0",
         "joi": "12.0.0",
-        "reflect-metadata": "^0.1.10",
         "route-parser": "^0.0.5"
     },
     "peerDependencies": {
         "dynogels": "^8.0.1",
-        "inversify": "^4.13.0",
-        "joi": "12.0.0",
-        "reflect-metadata": "^0.1.10",
-        "route-parser": "^0.0.5"
+        "joi": "12.0.0"
     },
     "scripts": {
         "build": "tsc",
