--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "build": "tsc",
         "test": "jest",
         "test-cover": "jest --coverage --collectCoverageFrom=!**/index.ts --collectCoverageFrom=lib/**/*.ts",
-        "test-travis": "yarn test-cover -- --coverageReporters=text-lcov | coveralls"
+        "test-travis": "jest --coverage && cat ./coverage/lcov.info | coveralls"
     },
     "repository": {
         "type": "git",
