--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,25 @@ language: node_js
 node_js:
 - '8'
 
-script:
-  - yarn add dev coveralls
-  - yarn test-travis
+jobs:
+  include:
+    - stage: Produce Coverage
+      node_js: node
+      script:
+        - yarn add dev coveralls
+        - yarn test-travis
+      if: branch = master
+
+jobs:
+  include:
+    - stage: Run unit tests
+      node_js: node
+      script: yarn test-cover
+      if: branch != master
+
+#script:
+#  - yarn add dev coveralls
+#  - yarn test-travis
 
 before_deploy:
 - rm -rf node_modules
