--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,21 @@
 language: node_js
 node_js:
 - '8'
+
+# only send coverage report if this is an actual push to master
+# TODO: may want to make this only send report during release
+script:
+  - |
+    if  [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_PULL_REQUEST_BRANCH" = "" ]; then
+      yarn add dev coveralls
+      yarn test-travis
+    else
+      yarn test-cover
+    fi
+
 before_deploy:
-- yarn build
-- rm -rf tests
-- rm -rf lib
-- rm -rf .git
-- rm .gitignore
-- rm .gitmodules
-- rm .travis.yml
-- rm index.ts
-- rm tslint.json
-- rm tsconfig.json
 - rm -rf node_modules
+- ./package
 
 deploy:
   provider: npm
