--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,9 @@ language: node_js
 node_js:
 - '8'
 
-# only send coverage report if this is an actual push to master
-# TODO: may want to make this only send report during release
 script:
-  - |
-    if  [ "$TRAVIS_BRANCH" = "master" ] && [ "$TRAVIS_PULL_REQUEST_BRANCH" = "" ]; then
-      yarn add dev coveralls
-      yarn test-travis
-    else
-      yarn test-cover
-    fi
+  - yarn add dev coveralls
+  - yarn test-travis
 
 before_deploy:
 - rm -rf node_modules
