--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,22 @@
 {
-
-    "compilerOptions": {
-        "types": ["node"],
-        "declaration": true,
-        "strict": true,
-        "sourceMap": true,
-        "preserveConstEnums": true,
-        "removeComments": true,
-        "noImplicitAny": false,
-        "experimentalDecorators": true,
-        "lib": ["es2015"],
-        "target": "es5",
-        "strictPropertyInitialization": false,
-        "module": "commonjs",
-        "moduleResolution": "node"
-    },
-    "exclude": [
-        "node_modules",
-        "tests"
-    ],
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "target": "es5",
+    "module":"es2015",
+    "lib": ["es2015", "es2016", "es2017", "dom"],
+    "strict": true,
+    "sourceMap": true,
+    "declaration": true,
+    "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "declarationDir": "dist/types",
+    "outDir": "dist/lib",
     "typeRoots": [
-        "../node_modules/@types"
+      "node_modules/@types"
     ]
+  },
+  "include": [
+    "src"
+  ]
 }
