--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,12 @@
-.DS_Store
-.vscode
 node_modules
-**/*/coverage
-dist/tests
-yarn-error.log
-package-lock.json
 coverage
-npm-debug.log
+.nyc_output
+.DS_Store
+*.log
+.vscode
 .idea
 dist
-yarn-error.log
-package/
-src/**/*.js
-src/**/*.js.map
-src/**/*.d.ts
-index.js
-index.js.map
-index.d.ts
+compiled
+.awcache
+.rpt2_cache
+docs
