--- a/package.json
+++ b/package.json
@@ -1,65 +1,119 @@
 {
-    "name": "mindless",
-    "version": "1.0.0-beta.9",
-    "description": "",
-    "main": "index.js",
-    "type": "index.d.ts",
-    "devDependencies": {
-        "@types/dynogels": "^8.0.0",
-        "@types/jest": "^21.1.6",
-        "@types/joi": "10.6.1",
-        "@types/node": "^8.0.31",
-        "@types/route-parser": "^0.1.1",
-        "jest": "^21.2.1",
-        "ts-jest": "^21.2.3",
-        "typemoq": "^2.0.1",
-        "typescript": "^2.5.3"
+  "name": "mindless",
+  "version": "0.0.0-development",
+  "description": "",
+  "keywords": [],
+  "main": "dist/mindless.umd.js",
+  "module": "dist/mindless.es5.js",
+  "typings": "dist/types/mindless.d.ts",
+  "files": [
+    "dist"
+  ],
+  "author": "Spartan Labs, LLC.",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/SpartanLabs/mindless"
+  },
+  "license": "MIT",
+  "engines": {
+    "node": ">=6.0.0"
+  },
+  "scripts": {
+    "lint": "tslint -t codeFrame 'src/**/*.ts' 'test/**/*.ts'",
+    "prebuild": "rimraf dist",
+    "build": "tsc --module commonjs && rollup -c rollup.config.ts && typedoc --out docs --target es6 --theme minimal --mode file src",
+    "start": "rollup -c rollup.config.ts -w",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
+    "deploy-docs": "ts-node tools/gh-pages-publish",
+    "report-coverage": "cat ./coverage/lcov.info | coveralls",
+    "commit": "git-cz",
+    "semantic-release": "semantic-release",
+    "semantic-release-prepare": "ts-node tools/semantic-release-prepare",
+    "precommit": "lint-staged",
+    "travis-deploy-once": "travis-deploy-once"
+  },
+  "lint-staged": {
+    "{src,test}/**/*.ts": [
+      "prettier --write --no-semi --single-quote",
+      "git add"
+    ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
     },
-    "dependencies": {
-        "dynogels": "^8.0.1",
-        "joi": "12.0.0",
-        "route-parser": "^0.0.5"
-    },
-    "peerDependencies": {
-        "dynogels": "^8.0.1",
-        "joi": "12.0.0"
-    },
-    "scripts": {
-        "build": "tsc",
-        "test": "jest",
-        "test-cover": "jest --coverage --collectCoverageFrom=!**/index.ts --collectCoverageFrom=lib/**/*.ts",
-        "test-travis": "jest --coverage && cat ./coverage/lcov.info | coveralls"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/SpartanLabs/mindless.git"
-    },
-    "keywords": [
-        "typescript",
-        "node",
-        "framework"
-    ],
-    "author": "SpartanLabs, LLC",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/SpartanLabs/mindless/issues"
-    },
-    "homepage": "https://github.com/SpartanLabs/mindless#readme",
-    "jest": {
-        "globals": {
-            "tsConfigFile": "tsconfig.json"
-        },
-        "moduleFileExtensions": [
-            "ts",
-            "js"
-        ],
-        "transform": {
-            "^.+\\.(ts)$": "./node_modules/ts-jest/preprocessor.js"
-        },
-        "testMatch": [
-            "**/tests/**/*.test.(ts)"
-        ],
-        "testEnvironment": "node",
-        "mapCoverage": true
+    "validate-commit-msg": {
+      "types": "conventional-commit-types",
+      "helpMessage": "Use \"npm run commit\" instead, we use conventional-changelog format :) (https://github.com/commitizen/cz-cli)"
     }
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
+    ],
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 90,
+        "functions": 95,
+        "lines": 95,
+        "statements": 95
+      }
+    },
+    "collectCoverage": true
+  },
+  "devDependencies": {
+    "@types/dynogels": "^9.0.0",
+    "@types/jest": "^22.0.0",
+    "@types/joi": "^13.0.8",
+    "@types/lodash": "^4.14.109",
+    "@types/node": "^9.3.0",
+    "@types/route-parser": "^0.1.1",
+    "colors": "^1.1.2",
+    "commitizen": "^2.9.6",
+    "coveralls": "^3.0.0",
+    "cross-env": "^5.0.1",
+    "cz-conventional-changelog": "^2.0.0",
+    "husky": "^0.14.0",
+    "jest": "^22.0.2",
+    "lint-staged": "^7.0.0",
+    "lodash.camelcase": "^4.3.0",
+    "prettier": "^1.4.4",
+    "prompt": "^1.0.0",
+    "replace-in-file": "^3.0.0-beta.2",
+    "rimraf": "^2.6.1",
+    "rollup": "^0.57.0",
+    "rollup-plugin-commonjs": "^9.0.0",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-resolve": "^3.0.0",
+    "rollup-plugin-sourcemaps": "^0.4.2",
+    "rollup-plugin-typescript2": "^0.11.1",
+    "semantic-release": "^15.4.1",
+    "ts-jest": "^22.0.0",
+    "ts-node": "^6.0.0",
+    "tslint": "^5.8.0",
+    "tslint-config-prettier": "^1.1.0",
+    "tslint-config-standard": "^7.0.0",
+    "typedoc": "^0.11.0",
+    "typemoq": "^2.1.0",
+    "typescript": "^2.6.2",
+    "validate-commit-msg": "^2.12.2",
+    "travis-deploy-once": "^5.0.0"
+  },
+  "dependencies": {
+    "dynogels": "^9.0.0",
+    "joi": "^13.3.0",
+    "route-parser": "0.0.5"
+  }
 }
