--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "start": "rollup -c rollup.config.ts -w",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:prod": "npm run lint && npm run test -- --coverage --no-cache",
+    "test:prod": "npm run nt && npm run test -- --coverage --no-cache",
     "deploy-docs": "ts-node tools/gh-pages-publish",
     "report-coverage": "cat ./coverage/lcov.info | coveralls",
     "commit": "git-cz",
@@ -74,9 +74,7 @@
     "collectCoverage": true
   },
   "devDependencies": {
-    "@types/dynogels": "^9.0.0",
     "@types/jest": "^22.0.0",
-    "@types/joi": "^13.0.8",
     "@types/lodash": "^4.14.109",
     "@types/node": "^9.3.0",
     "@types/route-parser": "^0.1.1",
@@ -112,8 +110,6 @@
     "travis-deploy-once": "^5.0.0"
   },
   "dependencies": {
-    "dynogels": "^9.0.0",
-    "joi": "^13.3.0",
     "route-parser": "0.0.5"
   }
 }
