--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     }
   },
   "jest": {
+    "testEnvironment": "node",
     "transform": {
       ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
     },
@@ -74,9 +75,7 @@
     "collectCoverage": true
   },
   "devDependencies": {
-    "@types/dynogels": "^9.0.0",
     "@types/jest": "^22.0.0",
-    "@types/joi": "^13.0.8",
     "@types/lodash": "^4.14.109",
     "@types/node": "^9.3.0",
     "@types/route-parser": "^0.1.1",
@@ -112,8 +111,6 @@
     "travis-deploy-once": "^5.0.0"
   },
   "dependencies": {
-    "dynogels": "^9.0.0",
-    "joi": "^13.3.0",
     "route-parser": "0.0.5"
   }
 }
