--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
+    "strictPropertyInitialization": false,
     "outDir": "dist/lib",
     "typeRoots": [
       "node_modules/@types"
