refactor(request objects): change params, query string, and headers to be es6 maps
BREAKING CHANGE: must now pass headers and query string through as es6 maps

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
-    "strictPropertyInitialization": false,
+    "strictPropertyInitialization": true,
     "outDir": "dist/lib",
     "typeRoots": [
       "node_modules/@types"
