--- a/package.json
+++ b/package.json
@@ -99,16 +99,16 @@
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.11.1",
     "semantic-release": "^15.4.1",
+    "travis-deploy-once": "^5.0.0",
     "ts-jest": "^22.0.0",
     "ts-node": "^6.0.0",
     "tslint": "^5.8.0",
     "tslint-config-prettier": "^1.1.0",
     "tslint-config-standard": "^7.0.0",
-    "typedoc": "^0.11.0",
+    "typedoc": "^0.14.2",
     "typemoq": "^2.1.0",
-    "typescript": "^2.6.2",
-    "validate-commit-msg": "^2.12.2",
-    "travis-deploy-once": "^5.0.0"
+    "typescript": "^3.5.3",
+    "validate-commit-msg": "^2.12.2"
   },
   "dependencies": {
     "route-parser": "0.0.5"
