--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
     "strictPropertyInitialization": true,
+    "strictNullChecks": true,
     "outDir": "dist/lib",
     "typeRoots": [
       "node_modules/@types"
