Updates to handling of Requests (#88)
* feat(Request and App handler): Add ability for custom request deserialization and improve request ob

BREAKING CHANGE: Request class has changed

* test(Request and App): finsih updating request and app classes

add functinality to support future features outlined in issue #73

re #86

* refactor(request objects): change params, query string, and headers to be es6 maps

BREAKING CHANGE: must now pass headers and query string through as es6 maps

* build(typescript version bump): updated to latest stable typescript version 3.5.x

* docs(rejadme):

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,8 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "declarationDir": "dist/types",
+    "strictPropertyInitialization": true,
+    "strictNullChecks": true,
     "outDir": "dist/lib",
     "typeRoots": [
       "node_modules/@types"
